NXP-5847 - Nuxeo java launcher; new approach running server from a Shell command